# MinskFork

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.cmd  mcf.sln  test.cmd
MCF/: Binder.cpp  Binder.h  Binding.cpp  Binding.h  BoundExpressions.cpp  BoundExpressions.h  BoundLabel.h  BoundNode.cpp  BoundNode.h  BoundNodePrinter.cpp  BoundNodePrinter.h  BoundStatements.cpp  BoundStatements.h  CMakeLists.txt  Compilation.cpp  Compilation.h  ConsoleHelper.cpp  ConsoleHelper.h  ControlFlowGraph.cpp  ControlFlowGraph.h  Conversion.cpp  Conversion.h  Diagnostic.cpp  Diagnostic.h  EnumHelper.h  IO.cpp  IO.h  Lexer.cpp  Lexer.h  Lowering.cpp  Lowering.h  MCF.cpp  MCF.vcxproj  MCF.vcxproj.filters  Parser.cpp  Parser.h  Parsing.cpp  Parsing.h  ReflectionHelper.h  SourceText.cpp  (+25 more)
MCF/include/: Binding.h  BoundExpressions.h  BoundLabel.h  BoundNode.h  BoundNodePrinter.h  BoundStatements.h  Compilation.h  ConsoleHelper.h  ControlFlowGraph.h  Conversion.h  Diagnostic.h  Emitter.h  EnumHelper.h  IO.h  Lexer.h  Lowering.h  Parsing.h  ReflectionHelper.h  SourceText.h  StringHelper.h  SymbolPrinter.h  Symbols.h  SyntaxExpressions.h  SyntaxKind.h  SyntaxStatements.h  SyntaxToken.h  Values.h  common.h  helpers.h  stdafx.h
MCF/src/: Binding.cpp  BoundExpressions.cpp  BoundNode.cpp  BoundNodePrinter.cpp  BoundStatements.cpp  Compilation.cpp  ConsoleHelper.cpp  ControlFlowGraph.cpp  Conversion.cpp  Diagnostic.cpp  Emitter.cpp  IO.cpp  Lexer.cpp  Lowering.cpp  Parsing.cpp  SourceText.cpp  StringHelper.cpp  SymbolPrinter.cpp  Symbols.cpp  SyntaxExpressions.cpp  SyntaxKind.cpp  SyntaxStatements.cpp  SyntaxToken.cpp  Values.cpp  dllmain.cpp  helpers.cpp
Tests/: EvaluationTests.cpp  LexerTests.cpp  ParserTests.cpp  Tests.vcxproj  Tests.vcxproj.filters  unittest1.cpp
ctest/: CMakeLists.txt
ctest/include/: AnnotatedText.h  AssertingHelper.h
ctest/src/: AnnotatedText.cpp  AssertingHelper.cpp  Evaluation_tests.cpp  Lexer_tests.cpp  Parser_tests.cpp  SourceText_tests.cpp
mcfc/: CMakeLists.txt  Repl.cpp  Repl.h  mcfc.cpp  mcfc.vcxproj  mcfc.vcxproj.filters
mcfc/src/: mcfc.cpp
mcfi/: CMakeLists.txt  Repl.cpp  Repl.h  mcfi.cpp  mcfi.vcxproj  mcfi.vcxproj.filters
mcfi/include/: Authoring.h  Repl.h
mcfi/src/: Authoring.cpp  Repl.cpp
samples/: fib.mcf  lib.cpp  strops.cpp
samples/fib/: add.mcf  build.cmd  fib.mcf  test.cpp  test.mcf
samples/hello/: build.cmd  hello.mcf  helloworld.mcf
samples/io/: build.cmd  test.cpp  test.mcf
tests/: CMakeLists.txt
tests/include/: AnnotatedText.h  AssertingHelper.h
tests/src/: AnnotatedText.cpp  AssertingHelper.cpp  Evaluation_tests.cpp  Lexer_tests.cpp  Parser_tests.cpp  SourceText_tests.cpp
